--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -8,10 +8,12 @@ html,
 body {
     width: 100%;
     height: 100%;
+
 }
 
 body {
     font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    background-image: url(home_background.jpg);
 }
 
 hr {
@@ -511,3 +513,8 @@ body {
     webkit-tap-highlight-color: #222;
 }
 #contact{background-color: #FFFFFF;}
+.container1{
+margin-right:150px;
+margin-left:150px;
+    background-color: #FFFFFF;
+}
