--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,4 +1,4 @@
-<% Post.all.in_groups_of(4) do |group| %>
+<% Post.all.order("id desc").limit(4).in_groups_of(4) do |group| %>
   <div class="row">
     <% group.compact.each do |idea| %>
       <div class="col-md-6">
